# AirLogic

./: .gitignore  .gitlab-ci.yml  .gitmodules  Readme.md  build.sh  install.sh
doc/: GUI.vsdx  ~$$GUI.~vsdx
new_files/: readme.txt
new_files/framework-ststm32/: package.json
new_files/framework-ststm32/cores/stm/: HardwareTimer.cpp  IPAddress.cpp  Print.cpp  Tone.cpp  pins_stm.c  pins_stm.h  wiring_pulse.cpp
new_files/framework-ststm32/tools/: platformio-build.py
new_files/framework-ststm32/variants/BLACK_F407XX/: variant.h
new_files/framework-ststm32/variants/DISCO_L475VG_IOT/: PeripheralPins.c
new_files/framework-ststm32/variants/Generic_F411Cx/: PeripheralPins.c  variant.cpp
new_files/framework-ststm32/variants/MFTECH_ALPRO/: ldscript.ld  variant.h
new_files/framework-ststm32/variants/MFTECH_BUTTON/: lds  variant.cpp  variant.h
new_files/framework-ststm32/variants/MFTECH_LCD/: ldscript.ld  variant.h
new_files/framework-ststm32/variants/PILL_F103XX-/: PeripheralPins.c  variant.cpp
scripts/: assembly.bat  edit.bat
src/MFTECH_BUTTON/: ldscript.ld
src/MFTECH_LCD/: PeripheralPins.c  variant.cpp
src/boot/lib/lcd/: lcd.cpp
src/boot/lib/mfproto/: mfprotophyserial.h
src/boot/src/: f405_init.h  timer_helpers.c
src/boot_button/boards/: test_f051.json
src/boot_button/lib/: mfbus.cpp
src/boot_lcd/lib/mfproto/: mfbus.cpp
src/boot_lcd/src/: timer_init.h
src/bootloader/: platformio.ini
src/bootloader/lib/CPINS/: cPins.cpp  cPins.h
src/bootloader/src/: bootloader.c  bootloader.h  f401_init.h
src/bootloader_f051/: platformio.ini
src/bootloader_f051/src/: main.cpp
src/bootloader_f401/: platformio.ini
src/button/: platformio.ini
src/button/lib/CPINS/: cPins.cpp
src/button/lib/mfproto/: mfbutton.h  mfbuttongen.h  mflcd.cpp  mflcd_data.h  mfprotophypipe.cpp  mfrgb.h
src/button/src/: main.cpp
src/controller/lib/SerialFlash/: SerialFlash.h  SerialFlashChip.cpp
src/controller/lib/mfproto/: bpins.h  mfbus_button.cpp  mfbutton.h  mflcd.h  mfmenu.h  mfproto.cpp  mfprotophyacm.h  mfvalve.h
src/controller/mfproto/: Kalman.cpp  mfbus.h  mfbusrgb.h  mfbutton.cpp  mfprotophyserial.cpp  mfrgb.h  mfsensor.cpp  mfsensor.h
src/controller/src/: PinManage.h  init.h  notes.h
src/flasher/: flasher  platformio.ini  program
src/flasher/binarylibs/linux/: libusb-1.0.so.0.2.0
src/flasher/binarylibs/win32/: libusb-1.0.la  libusb-1.0.lai
src/flasher/lib/mfproto/: mfbus.h  mfproto.h  mfprotophyuart.cpp
src/flasher/src/: main.cpp
src/flasher_gui/: CMakeLists.txt
src/flasher_gui/lib/mfproto/: mfbus.cpp  mfbus.h  mfproto.cpp  mfproto.h  mfprotophyuart.cpp  mfprotophyuart.h
src/flasher_gui/lib/serial/!.git/: config
src/flasher_gui/lib/serial/!.git/objects/pack/: pack-876b9fb85532a8210b25e2aa2a3c34d51e157e4f.idx
src/flasher_gui/src/: Application.cpp  Frame.cpp  Frame.h  TableModules.cpp  TableModules.h  defines.h  libusb.h  main.cpp
src/framework-ststm32/: package.json
src/framework-ststm32/cores/stm/: HardwareSerial.cpp  HardwareSerial.h  HardwareTimer.h  Stream.cpp  WInterrupts.cpp  main.cpp  sketch.h  wiring_analog.c  wiring_digital.c  wiring_shift.c  wiring_time.c
src/framework-ststm32/variants/DISCO_L475VG_IOT/: variant.cpp
src/framework-ststm32/variants/MFTECH_ALPRO/: PeripheralPins.c  variant.cpp
src/framework-ststm32/variants/MFTECH_BUTTON/: PeripheralPins.c  variant.cpp
src/lcd/: platformio.ini
src/lcd/src/: font_DejaVuSans10.h  font_NotoSansBold9.h  font_Roboto-regular8.h  font_RobotoCondReg10.h  font_fixedsys6.h  font_terminess6.h
src/mf_lcd/: platformio.ini
src/mf_lcd/src/: font_Roboto16.h  font_fixed6.h  font_fixed6.h.bak  font_pixelmix6.h  images.h  init.h  lcd.cpp  main.cpp
src/mfproto/: mfbus_upload.py  platformio.ini
src/mfproto/src/: Kalman.cpp  Kalman.h  apins.cpp  apins.h  init.h  main.cpp  mfmenu.h  mfsensor.cpp  mfsensor.h  mfsettings.cpp  mfsettings.h  mfsettings_data.h  mftranslation.cpp  mftranslation.h  mfvalve.cpp  mfvalve.h  mfwheel.cpp  mfwheel.h  rtosmalloc.c
src/toolchain-gccarmnoneeabi/: package.json
src2/boot/: platformio.ini
src2/boot/boards/: mftech_alpro10.json
src2/boot/src/: f401_init.h
src2/boot_button/: platformio.ini
src2/boot_lcd/: platformio.ini
src2/boot_lcd/src/: aeskey.h  timer_helpers.h
src2/bootloader/: platformio.ini
src2/bootloader/src/: main.cpp
src2/bootloader_f051/: platformio.ini
src2/bootloader_f051/lib/: mfbus.h
src2/bootloader_f051/src/: bootloader.c  malloc_ts.c
src2/bootloader_f401/: platformio.ini
src2/button/: mfbus_upload.py  mfbus_upload_v2.py  platformio.ini
src2/button/src/: main.cpp
src2/controller/: platformio.ini
src2/controller/mfproto/: mfbus_button.cpp  mfbustone.h  mflcd.cpp  mfprotophyacm.cpp  mfprotophypipe.h  mfprotophyserial.h  mfprotopipe.h  mfsettings.cpp  mfsettings_data.h  mfwheel.cpp  mfwheel.h
src2/controller/src/: supervisor.h
src2/flasher/: platformio.ini  terminal
src2/lcd/: mfbus_upload.py
src2/lcd/src/: font_NotoMono-regular10.h  font_NotoMonoReg10.h  font_RobotoBold12.h  font_fixedsys8.h  font_terminusbold12.h  gfxfont.h  lcd.h
src2/mf_lcd/: platformio.ini
src2/mf_lcd/boards/: mftech_alpro10_lcd.json
src2/mf_lcd/src/: font_FreeSansBold10.h  font_NotoMono-regular8.h  font_NotoMono12.h  font_NotoSansBold10.h  font_Roboto8.h  font_RobotoLight9.h  font_RobotoMedium10.h  font_RobotoMedium11.h  font_terminess8.h  images.h  init.h  lcd.cpp  main.cpp
src2/mftech-f405/: mfupload  platformio.ini
src2/mftech-f405/mfproto/: apins.cpp  apins.h  mfbus.cpp  mfbus_button.h  mfbutton.h  mfcomp.cpp  mfcomp.h  mflcd.h  mfmenu.h  mfproto.cpp  mfprotophy.h  mfvalve.cpp  mfvalve.h
src2/mftech-f405/src/: .clang-format  calibration.h  main.cpp  menuactions.h
tools/: addframeworksconfigs.py  fixpackageconfig.py  fixplatformioini.py
(+169 files in other folders)
